[package]
name = "cava_spotify_viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imagequant = "3.0.1"
env_logger = { version = "0.9.0", default-features = false }
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
cookie = "0.16"
reqwest = { version = "0.11", features = ["blocking"] }
image = "0.24.6"
regex = "1.9.1"
dotenv = "0.15.0"
